Revert "|#000| Added div wrap to all pages and prevented openlmis header to go below the logo"
This reverts commit b989519600c137f133790d003e1a3b97a4aab2b4.

--- a/modules/openlmis-web/src/main/webapp/public/less/base.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/base.less
@@ -13,7 +13,7 @@ body {
   src: url('../fonts/HelveticaNeue-CondensedBold.woff') format('woff'); /* Modern Browsers */
   }
 #wrap {
-  min-width: 1000px;
+  min-width: 960px;
 }
 
 //bootstrap overrides: buttons
